<resources>
    <string name="app_name">WeatherData</string>
    <string name="label_city">Город</string>
    <string name="hint_city_input">Введите или выберите город</string>
    <string name="action_fetch_weather">Обновить</string>
    <string name="label_temperature">Температура</string>
    <string name="label_feels_like">Ощущается как</string>
    <string name="label_humidity">Влажность</string>
    <string name="label_wind">Ветер</string>
    <string name="label_pressure">Давление</string>
    <string name="label_cloudiness">Облачность</string>
    <string name="label_description">Описание</string>
    <string name="placeholder_value">--</string>
    <string name="default_city">Irkutsk</string>
    <string name="openweather_api_key">d6843ab8ee963f5d372296dfff62aed7</string>
    <string name="error_empty_city">Укажите город</string>
    <string name="error_loading_weather">Не удалось получить данные: %1$s</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="content_desc_cloudiness">Иконка облачности</string>
    <string name="content_desc_wind_direction">Указатель направления ветра</string>
    <string name="content_desc_weather_card">Карточка текущей погоды</string>
    <string name="content_desc_weather_values">Показатели текущей погоды</string>
    <string name="hint_city_dropdown">Популярные города</string>
    <string name="label_last_update">Обновлено: %1$s</string>
    <string name="label_temperature_scale">Шкала температуры</string>
    <string name="label_celsius">Цельсий (°C)</string>
    <string name="label_fahrenheit">Фаренгейт (°F)</string>
    <string name="label_show_wind_direction">Показать направление ветра</string>
    <string name="label_select_city">Выберите город</string>
    <string-array name="weather_cities_display">
        <item>Иркутск</item>
        <item>Ангарск</item>
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
    </string-array>
    <string-array name="weather_cities_api">
        <item>Irkutsk</item>
        <item>Angarsk</item>
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Yekaterinburg</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>